--- a/vendor.conf
+++ b/vendor.conf
@@ -9,6 +9,7 @@ github.com/stretchr/testify v1.1.3
 github.com/davecgh/go-spew master
 github.com/pmezard/go-difflib master
 github.com/pkg/errors master
+golang.org/x/crypto/openpgp master
 # docker deps from https://github.com/docker/docker/blob/v1.11.2/hack/vendor.sh
 github.com/docker/docker v1.12.1
 github.com/docker/engine-api 4eca04ae18f4f93f40196a17b9aa6e11262a7269
