Vendor after merging mtrmac/image:ParseNormalizedNamed
… and use the master branch of docker/distribution which provides
docker/distribution/reference.ParseNormalizedNamed.

--- a/vendor.conf
+++ b/vendor.conf
@@ -19,7 +19,7 @@ github.com/gorilla/mux e444e69cbd
 github.com/docker/go-units 651fc226e7441360384da338d0fd37f2440ffbe3
 golang.org/x/net master https://github.com/golang/net.git
 # end docker deps
-github.com/docker/distribution 07f32ac1831ed0fc71960b7da5d6bb83cb6881b5
+github.com/docker/distribution master
 github.com/docker/libtrust master
 github.com/opencontainers/runc master
 github.com/opencontainers/image-spec v1.0.0-rc3
