fix OCI image-spec dependency
Signed-off-by: Antonio Murdaca <runcom@redhat.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -23,12 +23,11 @@ golang.org/x/net master https://github.com/golang/net.git
 github.com/docker/distribution master
 github.com/docker/libtrust master
 github.com/opencontainers/runc master
-github.com/opencontainers/image-spec v1.0.0-rc3
+github.com/opencontainers/image-spec master
 github.com/mtrmac/gpgme master
 # openshift/origin' k8s dependencies as of OpenShift v1.1.5
 github.com/golang/glog 44145f04b68cf362d9c4df2182967c2275eaefed
-k8s.io/kubernetes 4a3f9c5b19c7ff804cbc1bf37a15c044ca5d2353 https://github.com/openshift/kubernetes
-k8s.io/apimachinery master
+k8s.io/client-go master
 github.com/ghodss/yaml 73d445a93680fa1a78ae23a5839bad48f32ba1ee
 gopkg.in/yaml.v2 d466437aa4adc35830964cffc5b5f262c63ddcb4
 github.com/imdario/mergo 6633656539c1639d9d78127b7d47c622b5d7b6dc
