integration: add upstream validator to OCI roundtrip tests
In order to make sure that we don't create invalid OCI images that are
consistently invalid, add additional checks to ensure that both of the
generated OCI images in the round-trip test are valid according to the
upstream validator.

This commit vendors the following packages (deep breath):
* oci/image-tools@7575a093636327fc41bdb043a581d04b78cae233, which requires
* oci/image-spec@v1.0.0-rc4 [revendor, but is technically an update
  because I couldn't figure out what version was vendored last time]
* oci/runtime-spec@v1.0.0-rc4
* xeipuuv/gojsonschema@6b67b3fab74d992bd07f72550006ab2c6907c416
* xeipuuv/gojsonreference@e02fc20de94c78484cd5ffb007f8af96be030a45
* xeipuuv/gojsonpointer@e0fe6f68307607d540ed8eac07a342c33fa1b54a
* camlistore/go4@7ce08ca145dbe0e66a127c447b80ee7914f3e4f9

Signed-off-by: Aleksa Sarai <asarai@suse.de>

--- a/vendor.conf
+++ b/vendor.conf
@@ -22,7 +22,15 @@ golang.org/x/net master
 github.com/docker/distribution master
 github.com/docker/libtrust master
 github.com/opencontainers/runc master
-github.com/opencontainers/image-spec master
+github.com/opencontainers/image-spec v1.0.0-rc4
+# -- start OCI image validation requirements.
+github.com/opencontainers/runtime-spec v1.0.0-rc4
+github.com/opencontainers/image-tools master
+github.com/xeipuuv/gojsonschema master
+github.com/xeipuuv/gojsonreference master
+github.com/xeipuuv/gojsonpointer master
+go4.org/errorutil master https://github.com/camlistore/go4
+# -- end OCI image validation requirements
 github.com/mtrmac/gpgme master
 # openshift/origin' k8s dependencies as of OpenShift v1.1.5
 github.com/golang/glog 44145f04b68cf362d9c4df2182967c2275eaefed
