Vendor after merging https://github.com/containers/image/pull/275

--- a/vendor.conf
+++ b/vendor.conf
@@ -44,4 +44,4 @@ github.com/mistifyio/go-zfs 22c9b32c84eb0d0c6f4043b6e90fc94073de92fa
 github.com/pborman/uuid v1.0
 github.com/opencontainers/selinux master
 golang.org/x/sys/unix master
-github.com/tchap/go-patricia master
+github.com/tchap/go-patricia v2.2.6
