Vendor after merging mtrmac/image:docker-certs.d

--- a/vendor.conf
+++ b/vendor.conf
@@ -45,3 +45,4 @@ github.com/pborman/uuid v1.0
 github.com/opencontainers/selinux master
 golang.org/x/sys/unix master
 github.com/tchap/go-patricia v2.2.6
+github.com/BurntSushi/toml master
