fail early when image os doesn't match host os
Signed-off-by: Antonio Murdaca <runcom@redhat.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -43,6 +43,6 @@ github.com/imdario/mergo 6633656539c1639d9d78127b7d47c622b5d7b6dc
 github.com/mistifyio/go-zfs 22c9b32c84eb0d0c6f4043b6e90fc94073de92fa
 github.com/pborman/uuid v1.0
 github.com/opencontainers/selinux master
-golang.org/x/sys/unix master
+golang.org/x/sys master
 github.com/tchap/go-patricia v2.2.6
 github.com/BurntSushi/toml master
