Update to image-spec v1.0.0 and revendor

--- a/vendor.conf
+++ b/vendor.conf
@@ -25,7 +25,7 @@ github.com/docker/libtrust master
 github.com/opencontainers/runc master
 github.com/opencontainers/image-spec v1.0.0
 # -- start OCI image validation requirements.
-github.com/opencontainers/runtime-spec v1.0.0-rc4
+github.com/opencontainers/runtime-spec v1.0.0
 github.com/opencontainers/image-tools v0.1.0
 github.com/xeipuuv/gojsonschema master
 github.com/xeipuuv/gojsonreference master
