Add docker-credential-helpers dependency.

--- a/vendor.conf
+++ b/vendor.conf
@@ -23,6 +23,7 @@ golang.org/x/net master
 golang.org/x/text master
 github.com/docker/distribution master
 github.com/docker/libtrust master
+github.com/docker/docker-credential-helpers d68f9aeca33f5fd3f08eeae5e9d175edf4e731d1
 github.com/opencontainers/runc master
 github.com/opencontainers/image-spec v1.0.0
 # -- start OCI image validation requirements.
