--- a/vendor.conf
+++ b/vendor.conf
@@ -2,11 +2,12 @@
 github.com/urfave/cli v1.20.0
 github.com/kr/pretty v0.1.0
 github.com/kr/text v0.1.0
-github.com/containers/image 693ff528622c5dd8835012f4e257a5793be577e0
+github.com/containers/image 22beff9696cfe608ad456c3f4a8053897153f979
+github.com/vbauerster/mpb v3.3.4
+github.com/mattn/go-isatty v0.0.4
+github.com/VividCortex/ewma v1.1.1
 golang.org/x/sync 42b317875d0fa942474b76e1b46a6060d720ae6e
 github.com/opencontainers/go-digest c9281466c8b2f606084ac71339773efd177436e7
-gopkg.in/cheggaaa/pb.v1 v1.0.27
-github.com/mattn/go-runewidth 14207d285c6c197daabb5c9793d63e7af9ab2d50
 github.com/containers/storage master
 github.com/sirupsen/logrus v1.0.0
 github.com/go-check/check v1
