Switch to github.com/etcd-io/bbolt
github.com/boltdb/bolt is no longer maintained.

Signed-off-by: Valentin Rothberg <rothberg@redhat.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -2,7 +2,7 @@
 github.com/urfave/cli v1.20.0
 github.com/kr/pretty v0.1.0
 github.com/kr/text v0.1.0
-github.com/containers/image be45336d5996db292aade0a0e3dbaf59a28a26b8
+github.com/containers/image e9c3d17ddb8cb5d48450bc0588525b17b181c049
 github.com/containers/buildah 25b7c1164a262934a6526ded1115dfacfc51f8ec
 github.com/vbauerster/mpb v3.3.4
 github.com/mattn/go-isatty v0.0.4
@@ -18,7 +18,7 @@ github.com/pmezard/go-difflib 5d4384ee4fb2527b0a1256a821ebfc92f91efefc
 github.com/pkg/errors v0.8.1
 golang.org/x/crypto a4c6cb3142f211c99e4bf4cd769535b29a9b616f
 github.com/ulikunitz/xz v0.5.4
-github.com/boltdb/bolt v1.3.1
+github.com/etcd-io/bbolt v1.3.2
 # docker deps from https://github.com/docker/docker/blob/v1.11.2/hack/vendor.sh
 github.com/docker/docker da99009bbb1165d1ac5688b5c81d2f589d418341
 github.com/docker/go-connections 7beb39f0b969b075d1325fecb092faf27fd357b6
