--- a/vendor.conf
+++ b/vendor.conf
@@ -11,7 +11,7 @@ golang.org/x/sync 42b317875d0fa942474b76e1b46a6060d720ae6e
 github.com/opencontainers/go-digest c9281466c8b2f606084ac71339773efd177436e7
 github.com/containers/storage v1.12.10
 github.com/sirupsen/logrus v1.0.0
-github.com/go-check/check v1
+github.com/go-check/check 788fd78401277ebd861206a03c884797c6ec5541
 github.com/stretchr/testify v1.1.3
 github.com/davecgh/go-spew v1.1.1
 github.com/pmezard/go-difflib 5d4384ee4fb2527b0a1256a821ebfc92f91efefc
